[package]
name = "openssh-mux-client"
version = "0.7.1"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "Data format used to communicate with openssh mux server."
repository = "https://github.com/NobodyXu/ssh_mux_format"

keywords = ["ssh", "openssh", "multiplex", "async"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ssh_format = "0.5.0"
sendfd = { version = "0.4.0", features = ["tokio"] }
tokio = { version = "1.11.0", features = ["net"] }
typed-builder = "0.9.1"
once_cell = "1.8.0"
thiserror = "1.0.29"

[dev-dependencies]
tokio = { version = "1.11.0", features = ["rt", "macros", "io-util", "time"] }
tokio-pipe = "0.2.1"
assert_matches = "1.5.0"
