[package]
name = "openssh-mux-client"
version = "0.8.0"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "openssh mux client."
repository = "https://github.com/NobodyXu/openssh-mux-client"

keywords = ["ssh", "openssh", "multiplex", "async", "network"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ssh_format = "0.6.0"
sendfd = { version = "0.4.0", features = ["tokio"] }
tokio = { version = "1.11.0", features = ["net"] }
typed-builder = "0.9.1"
once_cell = "1.8.0"
thiserror = "1.0.29"

[dev-dependencies]
tokio = { version = "1.11.0", features = ["rt", "macros", "io-util", "time"] }
tokio-pipe = "0.2.1"
assert_matches = "1.5.0"
