[package]
name = "openssh-mux-client-error"
version = "0.1.1"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "openssh mux client."
repository = "https://github.com/openssh-rust/openssh-mux-client"

keywords = ["ssh", "openssh", "multiplex", "async", "network"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[dependencies]
thiserror = "2.0.0"
ssh_format_error = "0.1"
