[package]
name = "openssh-mux-client"
version = "0.17.3"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "openssh mux client."
repository = "https://github.com/openssh-rust/openssh-mux-client"

keywords = ["ssh", "openssh", "multiplex", "async", "network"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[dependencies]
openssh-mux-client-error = { version = "0.1", path = "../mux-client-error" }
cfg-if = "1.0.0"
serde = { version = "1.0.103", features = ["derive"] }
ssh_format = "0.14.1"

typed-builder = "0.19.1"
once_cell = "1.10.0"

sendfd = { version = "0.4.1", features = ["tokio"] }
tokio = { version = "1.11.0", features = ["net", "io-util"] }
tokio-io-utility = "0.7.1"
non-zero-byte-slice = { version = "0.1.0", path = "../non-zero-byte-slice" }

[dev-dependencies]
tokio = { version = "1.11.0", features = ["rt", "macros", "time"] }
tokio-pipe = "0.2.1"
assert_matches = "1.5.0"
