[package]
name = "openssh-proxy-client"
version = "0.1.0"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "openssh proxy client for openssh multiplex server."
repository = "https://github.com/openssh-rust/openssh-mux-client"

keywords = ["ssh", "openssh", "multiplex", "async", "network"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[dependencies]
bytes = { version = "1.2.1", features = ["serde"] }
compact_str = { version = "0.6.1", features = ["serde"] }
concurrent_arena = "0.1.7"
futures-util = { version = "0.3.24", features = ["sink"] }
serde = { version = "1.0.103", features = ["derive"] }
ssh_format = { version = "0.13.2", features = ["bytes"] }
strum = { version = "0.24", features = ["derive"] }
vec-strings = { version = "0.4.5", features = ["serde"] }
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["rt", "io-util"] }
tokio-io-utility = "0.7.1"
non-zero-byte-slice = { version = "0.1.0", path = "../non-zero-byte-slice" }
