[package]
name = "openssh-proxy-client"
version = "0.1.0"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "openssh proxy client for openssh multiplex server."
repository = "https://github.com/openssh-rust/openssh-mux-client"

keywords = ["ssh", "openssh", "multiplex", "async", "network"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[dependencies]
openssh-proxy-client-error = { version = "0.1", path = "../proxy-client-error" }
integer-hasher = "0.1.0"
bytes = { version = "1.2.1", features = ["serde"] }
compact_str = { version = "0.7.0", features = ["serde"] }
concurrent_arena = "0.1.7"
futures-util = { version = "0.3.24", features = ["sink"] }
serde = { version = "1.0.103", features = ["derive"] }
ssh_format = { version = "0.14.1", features = ["bytes"] }
strum = { version = "0.24", features = ["derive"] }
scopeguard = "1.1.0"
tokio = { version = "1.11.0", features = ["rt", "io-util", "sync", "macros"] }
tokio-io-utility = { version = "0.7.4", features = ["read-exact-to-bytes"] }
non-zero-byte-slice = { version = "0.1.0", path = "../non-zero-byte-slice" }
